# terminal-interface-v0

./: README.md
tui/: pyproject.toml
tui/tui/: stopwatch.py
