[tool.poetry]
name = "tui"
version = "0.1.0"
description = ""
authors = ["KauanIzidoro <cnttbussineskauan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
taskipy = "^1.13.0"
textual = "^0.81.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'python3 stopwatch.py'

